[gd_scene load_steps=3 format=3 uid="uid://bi35vbwjg01xi"]

[ext_resource type="Script" path="res://Code/Singletones/GlobalTimer.gd" id="1_docv6"]
[ext_resource type="AudioStream" uid="uid://b2t2jpbeb7xro" path="res://Assets/Music/Defrini - Biogas-Music.mp3" id="2_rgdeu"]

[node name="GlobalTimer" type="Node"]
script = ExtResource("1_docv6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rgdeu")

[node name="MusicBit" type="Timer" parent="AudioStreamPlayer"]
unique_name_in_owner = true
wait_time = 0.571

[node name="Beat8" type="Timer" parent="AudioStreamPlayer"]
unique_name_in_owner = true
wait_time = 4.571

[node name="GameTime" type="Timer" parent="."]

[connection signal="timeout" from="AudioStreamPlayer/MusicBit" to="." method="_on_music_bit_timeout"]
[connection signal="timeout" from="AudioStreamPlayer/Beat8" to="." method="_on_beat_8_timeout"]
[connection signal="timeout" from="GameTime" to="." method="_on_game_time_timeout"]
